--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -11,9 +11,10 @@
         "notFound": "Δεν βρέθηκε",
         "bookings": "Κρατήσεις",
         "map": "Χάρτης",
-        "explore": "Εξερεύνηση",
+        "explore": "Αναζήτηση",
         "news": "Νέα",
-        "scan": "Σάρωση"
+        "scan": "Σάρωση",
+        "messages": "Μηνύματα"
     },
     "common": {
         "save": "Αποθήκευση",
@@ -81,11 +82,19 @@
     },
     "bookings": {
         "title": "Κρατήσεις",
+        "myBookings": "Οι Κρατήσεις μου",
         "upcoming": "Προσεχείς",
         "past": "Παρελθόντα",
+        "history": "Ιστορικό",
         "noUpcomingBookings": "Δεν υπάρχουν προσεχείς κρατήσεις",
         "noPastBookings": "Δεν υπάρχουν προηγούμενες κρατήσεις",
+        "noBookingHistory": "Δεν υπάρχει ιστορικό κρατήσεων",
         "exploreClasses": "Εξερευνήστε τα μαθήματα για να κλείσετε την πρώτη σας συνεδρία!",
+        "whenYouBookClasses": "Όταν κάνετε κράτηση μαθημάτων, θα εμφανίζονται εδώ. Εξερευνήστε τα μαθήματα για να ξεκινήσετε!",
+        "pastBookingsWillAppear": "Οι προηγούμενες κρατήσεις σας θα εμφανίζονται εδώ μόλις παρακολουθήσετε μαθήματα.",
+        "signInToView": "Παρακαλώ συνδεθείτε για να δείτε τις κρατήσεις σας",
+        "loadingBookings": "Φόρτωση των κρατήσεών σας…",
+        "loadMore": "Φόρτωση περισσότερων κρατήσεων",
         "viewClass": "Προβολή Μαθήματος",
         "viewTicket": "Προβολή Εισιτηρίου",
         "cancelBooking": "Ακύρωση Κράτησης",
@@ -268,7 +277,49 @@
         "upcomingClasses": "Προσεχή Μαθήματα",
         "about": "Σχετικά με αυτό το μάθημα",
         "whatToBring": "Τι να φέρετε",
-        "cancellationPolicy": "Πολιτική Ακύρωσης"
+        "cancellationPolicy": "Πολιτική Ακύρωσης",
+        "availableSpots": "Διαθέσιμες θέσεις",
+        "spotsLeft": "{{count}} {{count, plural, one {θέση} other {θέσεις}}} αριστερά",
+        "credits": "credits",
+        "date": "Ημερομηνία",
+        "durationMinutes": "Διάρκεια: {{minutes}} λεπτά",
+        "cancelUntil": "Ακύρωση μέχρι: {{time}}",
+        "amenities": "Απολαύσεις",
+        "bookingHistory": "Ιστορικό Κρατήσεων",
+        "currentBooking": "✓ Τρέχουσα Κράτηση",
+        "completed": "✓ Ολοκληρώθηκε",
+        "youCancelled": "✗ Ακυρώσατε",
+        "cancelledByStudio": "✗ Ακυρώθηκε από το στούντιο",
+        "noShow": "⚠ Απουσία",
+        "youreAttending": "Θα Συμμετέχετε",
+        "checkedIn": "Check In",
+        "ticket": "Εισιτήριο",
+        "cancelBooking": "Ακύρωση κράτησης",
+        "cancelling": "Ακύρωση…",
+        "rebooking": "Επανακράτηση...",
+        "tapToRebook": "Πατήστε για επανακράτηση αυτού του μαθήματος",
+        "didntShowUp": "Δεν εμφανίστηκες σε αυτό το μάθημα",
+        "cannotBookAgain": "Δεν μπορείτε να κάνετε κράτηση αυτού του μαθήματος ξανά",
+        "bookClass": "Κράτηση Μαθήματος",
+        "booking": "Κράτηση…",
+        "spendCredits": "Ξόδεψε {{credits}} credits",
+        "signInRequired": "Απαιτείται Σύνδεση",
+        "signInRequiredMessage": "Παρακαλώ συνδεθείτε για να κάνετε κράτηση μαθημάτων.",
+        "signIn": "Σύνδεση",
+        "booked": "Κρατήθηκε",
+        "bookedSuccess": "Το μάθημά σας κρατήθηκε με επιτυχία.",
+        "bookingFailed": "Αποτυχία κράτησης",
+        "bookingFailedMessage": "Αποτυχία κράτησης μαθήματος. Παρακαλώ δοκιμάστε ξανά.",
+        "cancelBookingTitle": "Ακύρωση \"{{className}}\";",
+        "cancelBookingMessage": "Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Ενδέχεται να μην λάβετε πλήρη επιστροφή χρημάτων ανάλογα με την πολιτική ακύρωσης.",
+        "keepBooking": "Διατήρηση κράτησης",
+        "bookingCancelled": "Κράτηση ακυρώθηκε",
+        "bookingCancelledMessage": "Η κράτησή σας ακυρώθηκε. Οποιαδήποτε εφαρμοστέα επιστροφή χρημάτων θα ακολουθήσει την πολιτική ακύρωσης.",
+        "cancellationFailed": "Αποτυχία ακύρωσης",
+        "cancellationFailedMessage": "Αποτυχία ακύρωσης κράτησης. Παρακαλώ δοκιμάστε ξανά αργότερα.",
+        "noClassInfo": "Δεν παρέχονται πληροφορίες μαθήματος",
+        "loadingClassDetails": "Φόρτωση λεπτομερειών μαθήματος...",
+        "joinClassDescription": "Ελάτε μαζί με τον {{instructor}} για ένα υπέροχο μάθημα στο {{businessName}}"
     },
     "venues": {
         "title": "Χώροι",
@@ -379,11 +430,11 @@
         "welcomeBanner": {
             "title": "Καλώς ήρθατε! 🎉",
             "subtitle": "Χαιρόμαστε που είστε μαζί μας! Προσθέσαμε 10 credits στον λογαριασμό σας για να ξεκινήσετε. Κοιτάξτε γύρω, περιηγηθείτε στις διαφορετικές επιχειρήσεις και κρατήστε οποιαδήποτε τάξη σας αρέσει!",
-            "exploreButton": "Βρείτε μάθημα"
+            "exploreButton": "Αναζήτηση"
         },
         "noUpcomingClasses": {
             "title": "Δεν έχετε κρατήσεις",
-            "exploreButton": "Βρείτε μάθημα"
+            "exploreButton": "Αναζήτηση"
         },
         "yourSchedule": "Το Πρόγραμμά σας",
         "happeningToday": "Συμβαίνουν σήμερα",
@@ -404,6 +455,12 @@
     "messages": {
         "title": "Μηνύματα",
         "noMessages": "Δεν υπάρχουν μηνύματα",
+        "noMessagesYet": "Δεν υπάρχουν ακόμα μηνύματα",
+        "messagesFromVenues": "Τα μηνύματα από τους χώρους θα εμφανίζονται εδώ",
+        "loadingMessages": "Φόρτωση μηνυμάτων...",
+        "deleteConversation": "Διαγραφή Συνομιλίας",
+        "deleteConversationConfirm": "Είστε σίγουροι ότι θέλετε να διαγράψετε τη συνομιλία σας με {{venueName}}; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+        "deleteFailed": "Αποτυχία διαγραφής συνομιλίας. Παρακαλώ δοκιμάστε ξανά.",
         "sendMessage": "Αποστολή Μηνύματος",
         "typePlaceholder": "Πληκτρολογήστε ένα μήνυμα..."
     },
