--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -13,7 +13,8 @@
         "map": "Map",
         "explore": "Explore",
         "news": "News",
-        "scan": "Scan"
+        "scan": "Scan",
+        "messages": "Messages"
     },
     "common": {
         "save": "Save",
@@ -81,11 +82,19 @@
     },
     "bookings": {
         "title": "Bookings",
+        "myBookings": "My Bookings",
         "upcoming": "Upcoming",
         "past": "Past",
+        "history": "History",
         "noUpcomingBookings": "No upcoming bookings",
         "noPastBookings": "No past bookings",
+        "noBookingHistory": "No booking history",
         "exploreClasses": "Explore classes to book your first session!",
+        "whenYouBookClasses": "When you book classes, they'll appear here. Explore classes to get started!",
+        "pastBookingsWillAppear": "Your past bookings will appear here once you attend classes.",
+        "signInToView": "Please sign in to view your bookings",
+        "loadingBookings": "Loading your bookings…",
+        "loadMore": "Load more bookings",
         "viewClass": "View Class",
         "viewTicket": "View Ticket",
         "cancelBooking": "Cancel Booking",
@@ -268,7 +277,49 @@
         "upcomingClasses": "Upcoming Classes",
         "about": "About this class",
         "whatToBring": "What to bring",
-        "cancellationPolicy": "Cancellation Policy"
+        "cancellationPolicy": "Cancellation Policy",
+        "availableSpots": "Available spots",
+        "spotsLeft": "{{count}} {{count, plural, one {spot} other {spots}}} left",
+        "credits": "credits",
+        "date": "Date",
+        "durationMinutes": "Duration: {{minutes}} minutes",
+        "cancelUntil": "Cancel until: {{time}}",
+        "amenities": "Amenities",
+        "bookingHistory": "Booking History",
+        "currentBooking": "✓ Current Booking",
+        "completed": "✓ Completed",
+        "youCancelled": "✗ You cancelled",
+        "cancelledByStudio": "✗ Cancelled by studio",
+        "noShow": "⚠ No show",
+        "youreAttending": "You're Attending",
+        "checkedIn": "Checked In",
+        "ticket": "Ticket",
+        "cancelBooking": "Cancel booking",
+        "cancelling": "Cancelling…",
+        "rebooking": "Rebooking...",
+        "tapToRebook": "Tap to rebook this class",
+        "didntShowUp": "You didn't show up for this class",
+        "cannotBookAgain": "You cannot book this class again",
+        "bookClass": "Book Class",
+        "booking": "Booking…",
+        "spendCredits": "Spend {{credits}} credits",
+        "signInRequired": "Sign In Required",
+        "signInRequiredMessage": "Please sign in to book classes.",
+        "signIn": "Sign In",
+        "booked": "Booked",
+        "bookedSuccess": "Your class has been booked successfully.",
+        "bookingFailed": "Booking failed",
+        "bookingFailedMessage": "Failed to book class. Please try again.",
+        "cancelBookingTitle": "Cancel \"{{className}}\"?",
+        "cancelBookingMessage": "This action cannot be undone. You may not get a full refund depending on the cancellation policy.",
+        "keepBooking": "Keep booking",
+        "bookingCancelled": "Booking cancelled",
+        "bookingCancelledMessage": "Your booking has been cancelled. Any applicable refund will follow the cancellation policy.",
+        "cancellationFailed": "Cancellation failed",
+        "cancellationFailedMessage": "Failed to cancel booking. Please try again later.",
+        "noClassInfo": "No class information provided",
+        "loadingClassDetails": "Loading class details...",
+        "joinClassDescription": "Join {{instructor}} for an amazing class at {{businessName}}"
     },
     "venues": {
         "title": "Venues",
@@ -404,6 +455,12 @@
     "messages": {
         "title": "Messages",
         "noMessages": "No messages",
+        "noMessagesYet": "No messages yet",
+        "messagesFromVenues": "Messages from venues will appear here",
+        "loadingMessages": "Loading messages...",
+        "deleteConversation": "Delete Conversation",
+        "deleteConversationConfirm": "Are you sure you want to delete your conversation with {{venueName}}? This action cannot be undone.",
+        "deleteFailed": "Failed to delete conversation. Please try again.",
         "sendMessage": "Send Message",
         "typePlaceholder": "Type a message..."
     },
