--- a/apps/mobile-consumer/src/locales/lt/translation.json
+++ b/apps/mobile-consumer/src/locales/lt/translation.json
@@ -13,7 +13,8 @@
         "map": "Žemėlapis",
         "explore": "Tyrinėti",
         "news": "Naujienos",
-        "scan": "Skenuoti"
+        "scan": "Skenuoti",
+        "messages": "Žinutės"
     },
     "common": {
         "save": "Išsaugoti",
@@ -81,11 +82,19 @@
     },
     "bookings": {
         "title": "Rezervacijos",
+        "myBookings": "Mano Rezervacijos",
         "upcoming": "Būsimos",
         "past": "Praėję",
+        "history": "Istorija",
         "noUpcomingBookings": "Nėra būsimų rezervacijų",
         "noPastBookings": "Nėra praėjusių rezervacijų",
+        "noBookingHistory": "Nėra rezervacijų istorijos",
         "exploreClasses": "Naršykite pamokas, kad užsisakytumėte savo pirmąjį seansą!",
+        "whenYouBookClasses": "Kai užsisakysite pamokas, jos bus rodomos čia. Naršykite pamokas, kad pradėtumėte!",
+        "pastBookingsWillAppear": "Jūsų praėjusios rezervacijos bus rodomos čia, kai dalyvausite pamokose.",
+        "signInToView": "Prašome prisijungti, kad galėtumėte peržiūrėti savo rezervacijas",
+        "loadingBookings": "Įkeliamos jūsų rezervacijos…",
+        "loadMore": "Įkelti daugiau rezervacijų",
         "viewClass": "Peržiūrėti Pamoką",
         "viewTicket": "Peržiūrėti Bilietą",
         "cancelBooking": "Atšaukti Rezervaciją",
@@ -268,7 +277,49 @@
         "upcomingClasses": "Būsimos Pamokos",
         "about": "Apie šią pamoką",
         "whatToBring": "Ką atsivežti",
-        "cancellationPolicy": "Atšaukimo Politika"
+        "cancellationPolicy": "Atšaukimo Politika",
+        "availableSpots": "Prieinamos vietos",
+        "spotsLeft": "Liko {{count}} {{count, plural, one {vieta} other {vietos}}}",
+        "credits": "kreditai",
+        "date": "Data",
+        "durationMinutes": "Trukmė: {{minutes}} minutės",
+        "cancelUntil": "Atšaukti iki: {{time}}",
+        "amenities": "Paslaugos",
+        "bookingHistory": "Rezervacijų Istorija",
+        "currentBooking": "✓ Dabartinė Rezervacija",
+        "completed": "✓ Užbaigta",
+        "youCancelled": "✗ Jūs atšaukėte",
+        "cancelledByStudio": "✗ Atšaukta studijos",
+        "noShow": "⚠ Nepasirodė",
+        "youreAttending": "Jūs Dalyvaujate",
+        "checkedIn": "Registruota",
+        "ticket": "Bilietas",
+        "cancelBooking": "Atšaukti rezervaciją",
+        "cancelling": "Atšaukiama…",
+        "rebooking": "Perrezervuojama...",
+        "tapToRebook": "Paspauskite, kad perrezervuotumėte šią pamoką",
+        "didntShowUp": "Jūs nepasirodėte šioje pamokoje",
+        "cannotBookAgain": "Jūs negalite dar kartą užsisakyti šios pamokos",
+        "bookClass": "Užsisakyti Pamoką",
+        "booking": "Rezervuojama…",
+        "spendCredits": "Išleisti {{credits}} kreditų",
+        "signInRequired": "Reikalingas Prisijungimas",
+        "signInRequiredMessage": "Prašome prisijungti, kad galėtumėte užsisakyti pamokas.",
+        "signIn": "Prisijungti",
+        "booked": "Užsakyta",
+        "bookedSuccess": "Jūsų pamoka sėkmingai užsakyta.",
+        "bookingFailed": "Rezervacija nepavyko",
+        "bookingFailedMessage": "Nepavyko užsisakyti pamokos. Prašome bandyti dar kartą.",
+        "cancelBookingTitle": "Atšaukti \"{{className}}\";",
+        "cancelBookingMessage": "Šio veiksmo negalima anuliuoti. Priklausomai nuo atšaukimo politikos, galite negauti viso grąžinimo.",
+        "keepBooking": "Palikti rezervaciją",
+        "bookingCancelled": "Rezervacija atšaukta",
+        "bookingCancelledMessage": "Jūsų rezervacija buvo atšaukta. Bet koks taikomas grąžinimas bus vykdomas pagal atšaukimo politiką.",
+        "cancellationFailed": "Atšaukimas nepavyko",
+        "cancellationFailedMessage": "Nepavyko atšaukti rezervacijos. Prašome bandyti vėliau.",
+        "noClassInfo": "Informacija apie pamoką nepateikta",
+        "loadingClassDetails": "Įkeliamos pamokos detalės...",
+        "joinClassDescription": "Prisijunkite prie {{instructor}} nuostabios pamokos {{businessName}}"
     },
     "venues": {
         "title": "Vietos",
@@ -404,6 +455,12 @@
     "messages": {
         "title": "Žinutės",
         "noMessages": "Nėra žinučių",
+        "noMessagesYet": "Dar nėra žinučių",
+        "messagesFromVenues": "Žinutės iš vietų bus rodomos čia",
+        "loadingMessages": "Įkeliamos žinutės...",
+        "deleteConversation": "Ištrinti Pokalbį",
+        "deleteConversationConfirm": "Ar tikrai norite ištrinti pokalbį su {{venueName}}? Šio veiksmo negalima anuliuoti.",
+        "deleteFailed": "Nepavyko ištrinti pokalbio. Prašome bandyti dar kartą.",
         "sendMessage": "Siųsti Žinutę",
         "typePlaceholder": "Rašykite žinutę..."
     },
