Remove lithuanian language

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -220,7 +220,7 @@
         "monthlySubscription": "Μηνιαία Συνδρομή",
         "chooseYourPlan": "Επιλέξτε το Πλάνο σας",
         "whySubscribe": "Γιατί να κάνετε συνδρομή;",
-        "benefits": "• Εξοικονομήστε 5-10% σε σύγκριση με εφάπαξ αγορές\n• Οι credits προστίθενται στον λογαριασμό σας κάθε μήνα\n• Χρησιμοποιήστε credits για κρατήσεις σε οποιοδήποτε στούντιο-συνεργάτη\n• Οι αχρησιμοποίητες credits μεταφέρονται για έως και 3 μήνες\n• Ακυρώστε ανά πάσα στιγμή - δεν απαιτείται δέσμευση",
+        "benefits": "• Εξοικονομήστε 5-10% σε σύγκριση με εφάπαξ αγορές\n• Τα credits προστίθενται στον λογαριασμό σας κάθε μήνα\n• Χρησιμοποιήστε credits για κρατήσεις σε οποιοδήποτε στούντιο-συνεργάτη\n• Οι αχρησιμοποίητες credits μεταφέρονται για έως και 3 μήνες\n• Ακυρώστε ανά πάσα στιγμή - δεν απαιτείται δέσμευση",
         "selectPlan": "Επιλογή Πλάνου",
         "subscribe": "Εγγραφή",
         "cancelSubscription": "Ακύρωση Συνδρομής",
@@ -276,7 +276,7 @@
         "buyNow": "Αγορά τώρα",
         "processing": "Επεξεργασία...",
         "topUpCredits": "Συμπληρώστε το υπόλοιπο credits σας αμέσως",
-        "creditsValid": "Οι credits ισχύουν για 3 μήνες μετά την έκδοση. Ιδανικά για περιστασιακές κρατήσεις.",
+        "creditsValid": "Τα credits ισχύουν για 3 μήνες μετά την έκδοση. Ιδανικά για περιστασιακές κρατήσεις.",
         "quickBuy": "Γρήγορη αγορά",
         "quickBuySubtitle": "Αποκτήστε credits αμέσως",
         "buyCreditsButton": "Αγορά credits",
@@ -286,7 +286,7 @@
         "purchase": "Αγορά",
         "expiresIn": "Λήγει σε {{days}} ημέρες",
         "expired": "Έληξε",
-        "purchaseDescription": "Αγοράστε credits αν τελειώνουν ή δεν θέλετε να ξεκινήσετε συνδρομή. Οι credits θα λήξουν 90 ημέρες μετά την αγορά.",
+        "purchaseDescription": "Αγοράστε credits αν τελειώνουν ή δεν θέλετε να ξεκινήσετε συνδρομή. Τα credits θα λήξουν 90 ημέρες μετά την αγορά.",
         "currentBalance": "Τρέχον Υπόλοιπο",
         "creditsAvailable": "διαθέσιμες credits",
         "availableCreditPacks": "Διαθέσιμα Πακέτα Credits",
@@ -321,7 +321,9 @@
         "whatToBring": "Τι να φέρετε",
         "cancellationPolicy": "Πολιτική Ακύρωσης",
         "availableSpots": "Διαθέσιμες θέσεις",
-        "spotsLeft": "{{count}} {{count, plural, one {θέση} other {θέσεις}}} αριστερά",
+        "spotsLeft": "{{count}} θέσεις",
+        "spotsLeft_one": "{{count}} θέση",
+        "spotsLeft_other": "{{count}} θέσεις",
         "credits": "credits",
         "date": "Ημερομηνία",
         "durationMinutes": "Διάρκεια: {{minutes}} λεπτά",
