--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -321,7 +321,9 @@
         "whatToBring": "What to bring",
         "cancellationPolicy": "Cancellation Policy",
         "availableSpots": "Available spots",
-        "spotsLeft": "{{count}} {{count, plural, one {spot} other {spots}}} left",
+        "spotsLeft": "{{count}} spots left",
+        "spotsLeft_one": "{{count}} spot left",
+        "spotsLeft_other": "{{count}} spots left",
         "credits": "credits",
         "date": "Date",
         "durationMinutes": "Duration: {{minutes}} minutes",
