--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -64,8 +64,7 @@
         "hoursAgo": "{{count}}h ago",
         "languages": {
             "en": "English",
-            "el": "Greek",
-            "lt": "Lithuanian"
+            "el": "Greek"
         }
     },
     "routes": {
