--- a/apps/web-consumer/public/locales/en.json
+++ b/apps/web-consumer/public/locales/en.json
@@ -3,8 +3,7 @@
         "language": "Language",
         "languages": {
             "en": "English",
-            "el": "Greek",
-            "lt": "Lithuanian"
+            "el": "Greek"
         },
         "buttons": {
             "yes": "Yes",
