UI/UX improvements

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -64,7 +64,7 @@
     "auth": {
         "landing": {
             "title": "KymaClub",
-            "subtitle": "Η premium εμπειρία στην παραλία σας",
+            "subtitle": "Το wellness, στους δικούς σας όρους!",
             "feature1": "1. Επιλέξτε τα credits σας.",
             "feature2": "2. Διαλέξτε τις υπερδυνάμεις σας!",
             "feature3": "3. Περιηγηθείτε & Κλείστε τη θέση σας!",
@@ -72,10 +72,62 @@
             "signIn": "Σύνδεση",
             "footer": "Επί του παρόντος εξυπηρετούμε την Αθήνα και τις γύρω περιοχές"
         },
-        "signOut": "Αποσύνδεση",
+        "signIn": {
+            "title": "Καλώς ήρθατε στο KymaClub",
+            "subtitle": "Εισάγετε το email σας για να συνδεθείτε.",
+            "emailLabel": "Email",
+            "emailPlaceholder": "Εισάγετε το email σας",
+            "verificationCodeLabel": "Κωδικός Επαλήθευσης",
+            "verificationCodePlaceholder": "Εισάγετε 6ψήφιο κωδικό",
+            "checkEmailTitle": "Ελέγξτε το email σας",
+            "checkEmailSubtitle": "Στείλαμε έναν κωδικό επαλήθευσης στο {email}",
+            "button": "Σύνδεση",
+            "backToSignIn": "Πίσω στη Σύνδεση",
+            "back": "Πίσω",
+            "error": "Σφάλμα",
+            "errorEnterEmail": "Παρακαλώ εισάγετε τη διεύθυνση email σας",
+            "errorEnterCode": "Παρακαλώ εισάγετε τον κωδικό επαλήθευσης",
+            "errorSendCode": "Δεν ήταν δυνατή η αποστολή του κωδικού επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
+            "errorInvalidCode": "Μη έγκυρος κωδικός επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
+            "tooManyAttempts": "Πάρα Πολλές Προσπάθειες Σύνδεσης",
+            "tooManyAttemptsMessage": "Παρακαλώ δοκιμάστε ξανά σε {time}.",
+            "accountNotFound": "Λογαριασμός Δεν Βρέθηκε",
+            "accountNotFoundMessage": "Δεν βρέθηκε λογαριασμός με αυτή τη διεύθυνση email. Παρακαλώ δημιουργήστε πρώτα έναν λογαριασμό. Αν αυτό είναι λάθος, επικοινωνήστε με την υποστήριξη.",
+            "createAccountButton": "Δημιουργία Λογαριασμού",
+            "ok": "Εντάξει"
+        },
+        "register": {
+            "title": "Δημιουργία Λογαριασμού",
+            "subtitle": "Εισάγετε το email σας για να ξεκινήσετε.",
+            "emailLabel": "Email",
+            "emailPlaceholder": "Εισάγετε το email σας",
+            "verificationCodeLabel": "Κωδικός Επαλήθευσης",
+            "verificationCodePlaceholder": "Εισάγετε 6ψήφιο κωδικό",
+            "checkEmailTitle": "Ελέγξτε το email σας",
+            "checkEmailSubtitle": "Στείλαμε έναν κωδικό επαλήθευσης στο {email}",
+            "button": "Δημιουργία Λογαριασμού",
+            "verifyButton": "Επαλήθευση & Δημιουργία Λογαριασμού",
+            "back": "Πίσω",
+            "backToEmail": "Πίσω στο Email",
+            "error": "Σφάλμα",
+            "errorEnterEmail": "Παρακαλώ εισάγετε τη διεύθυνση email σας",
+            "errorEnterCode": "Παρακαλώ εισάγετε τον κωδικό επαλήθευσης",
+            "errorSendCode": "Δεν ήταν δυνατή η αποστολή του κωδικού επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
+            "errorInvalidCode": "Μη έγκυρος κωδικός επαλήθευσης. Παρακαλώ δοκιμάστε ξανά.",
+            "tooManyAttempts": "Πάρα Πολλές Προσπάθειες Εγγραφής",
+            "tooManyAttemptsMessage": "Παρακαλώ δοκιμάστε ξανά σε {time}.",
+            "accountExists": "Ο Λογαριασμός Υπάρχει Ήδη",
+            "accountExistsMessage": "Υπάρχει ήδη λογαριασμός με αυτό το email. Παρακαλώ συνδεθείτε αντί για αυτό.",
+            "signInButton": "Σύνδεση",
+            "ok": "Εντάξει"
+        },
+        "waitlist": {
+            "welcomeTitle": "Καλώς ήρθατε στη Λίστα Αναμονής! 🎉",
+            "welcomeMessage": "Ευχαριστούμε που συμμετείχατε! Θα σας ειδοποιήσουμε στο {email} όταν ξεκινήσουμε στο {city}.",
+            "ok": "Εντάξει"
+        },
+        "signOut": "Έξοδος",
         "signOutConfirm": "Είστε σίγουροι ότι θέλετε να αποσυνδεθείτε;",
-        "signIn": "Σύνδεση",
-        "createAccount": "Δημιουργία Λογαριασμού",
         "welcomeBack": "Καλώς ήρθατε πίσω!",
         "getStarted": "Ας ξεκινήσουμε"
     },
