--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -64,7 +64,7 @@
     "auth": {
         "landing": {
             "title": "KymaClub",
-            "subtitle": "Your premium beach experience",
+            "subtitle": "Discover wellness, sports & workshops",
             "feature1": "1. Select your credits.",
             "feature2": "2. Choose your superpowers!",
             "feature3": "3. Browse & Book your spot!",
@@ -72,10 +72,62 @@
             "signIn": "Sign In",
             "footer": "Currently serving Athens and surrounding areas"
         },
+        "signIn": {
+            "title": "Welcome to KymaClub",
+            "subtitle": "Enter your email to sign in.",
+            "emailLabel": "Email",
+            "emailPlaceholder": "Enter your email",
+            "verificationCodeLabel": "Verification Code",
+            "verificationCodePlaceholder": "Enter 6-digit code",
+            "checkEmailTitle": "Check your email",
+            "checkEmailSubtitle": "We sent a verification code to {email}",
+            "button": "Sign In",
+            "backToSignIn": "Back to Sign In",
+            "back": "Back",
+            "error": "Error",
+            "errorEnterEmail": "Please enter your email address",
+            "errorEnterCode": "Please enter the verification code",
+            "errorSendCode": "Could not send verification code. Please try again.",
+            "errorInvalidCode": "Invalid verification code. Please try again.",
+            "tooManyAttempts": "Too Many Login Attempts",
+            "tooManyAttemptsMessage": "Please try again in {time}.",
+            "accountNotFound": "Account Not Found",
+            "accountNotFoundMessage": "No account found with this email address. Please create an account first. If this is a mistake, contact support.",
+            "createAccountButton": "Create Account",
+            "ok": "OK"
+        },
+        "register": {
+            "title": "Create Account",
+            "subtitle": "Enter your email to get started",
+            "emailLabel": "Email",
+            "emailPlaceholder": "Enter your email",
+            "verificationCodeLabel": "Verification Code",
+            "verificationCodePlaceholder": "Enter 6-digit code",
+            "checkEmailTitle": "Check your email",
+            "checkEmailSubtitle": "We sent a verification code to {email}",
+            "button": "Create Account",
+            "verifyButton": "Verify & Create Account",
+            "back": "Back",
+            "backToEmail": "Back to Email",
+            "error": "Error",
+            "errorEnterEmail": "Please enter your email address",
+            "errorEnterCode": "Please enter the verification code",
+            "errorSendCode": "Could not send verification code. Please try again.",
+            "errorInvalidCode": "Invalid verification code. Please try again.",
+            "tooManyAttempts": "Too Many Registration Attempts",
+            "tooManyAttemptsMessage": "Please try again in {time}.",
+            "accountExists": "Account Already Exists",
+            "accountExistsMessage": "An account with this email already exists. Please sign in instead.",
+            "signInButton": "Sign In",
+            "ok": "OK"
+        },
+        "waitlist": {
+            "welcomeTitle": "Welcome to the Waitlist! 🎉",
+            "welcomeMessage": "Thanks for joining! We'll notify you at {email} when we launch in {city}.",
+            "ok": "OK"
+        },
         "signOut": "Sign Out",
         "signOutConfirm": "Are you sure you want to sign out?",
-        "signIn": "Sign In",
-        "createAccount": "Create Account",
         "welcomeBack": "Welcome back!",
         "getStarted": "Let's get started"
     },
